--- a/style.css
+++ b/style.css
@@ -28,7 +28,7 @@ section.top-section h1 span {
 .top-area-btn {
     text-decoration: none;
     color: #000;
-    background-color: red;
+    background-image: linear-gradient(to right,#FC964B, #FE482E);
     padding: 10px 25px;
     border-radius: 30px;
 }
@@ -46,4 +46,13 @@ section.top-section h1 span {
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
+}
+
+.about-me-section {
+    padding-top: 50px;
+    margin-right: 90px;
+}
+
+.about-me-section h1 {
+    margin-top: 70px;
 }
